--- a/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02a.qmd
+++ b/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02a.qmd
@@ -280,10 +280,14 @@ head(childcare)
 ```
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(childcare_sf)
 ```
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(childcare)
 ```
 
@@ -296,10 +300,14 @@ head(mpsz)
 ```
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(mpsz_sf)
 ```
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(mpsz)
 ```
 
@@ -308,10 +316,14 @@ head(sg)
 ```
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(sg_sf)
 ```
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(sg)
 ```
 :::
@@ -357,6 +369,8 @@ childcare_ppp
 Let's examine the difference by plotting *chidlcare_ppp*:
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(childcare_ppp)
 ```
 
@@ -434,6 +448,8 @@ sg_owin <- as.owin(sg_sf)
 The output object can be displayed by using `plot()` function:
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(sg_owin)
 ```
 
@@ -458,6 +474,8 @@ summary(childcareSG_ppp)
 ```
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(childcareSG_ppp)
 ```
 
@@ -490,9 +508,11 @@ kde_childcareSG_bw <- density(childcareSG_ppp,
                             kernel="gaussian") 
 ```
 
-The plot() function of Base R is then used to display the kernel density derived.
+The `plot()` function of Base R is then used to display the kernel density derived.
 
 ```{r}
+par(bg = '#E4D5C9')
+
 plot(kde_childcareSG_bw)
 ```
 
@@ -516,6 +536,8 @@ childcareSG_ppp.km <- rescale.ppp(childcareSG_ppp, 1000, "km")
 Now, we can re-run `density()` using the resale data set and plot the output kde map.
 
 ```{r}
+par(bg = '#E4D5C9')
+
 kde_childcareSG.bw <- density(childcareSG_ppp.km, sigma=bw.diggle, edge=TRUE, kernel="gaussian")
 plot(kde_childcareSG.bw)
 ```
@@ -559,6 +581,8 @@ Baddeley et. (2016) suggested the use of the `bw.ppl()` algorithm as it tends to
 This will be used to compare the output of using `bw.diggle()` and `bw.ppl()` methods.
 
 ```{r}
+par(bg = '#E4D5C9')
+
 kde_childcareSG.ppl <- density(childcareSG_ppp.km, 
                                sigma=bw.ppl, 
                                edge=TRUE,
@@ -574,6 +598,8 @@ plot(kde_childcareSG.ppl, main = "bw.ppl")
 By default, the kernel method used in `density.ppp()` is gaussian. But there are three other options, namely: *Epanechnikov*, *Quartic* and *Dics*. Let's take a look at what they're like:
 
 ```{r}
+par(bg = '#E4D5C9')
+
 par(mfrow=c(2,2))
 plot(density(childcareSG_ppp.km, 
              sigma=bw.ppl, 
@@ -604,6 +630,8 @@ plot(density(childcareSG_ppp.km,
 Next, we will compute a KDE layer by defining a bandwidth of 600 meter. Notice that in the code chunk below, the sigma value used is 0.6. This is because the unit of measurement of ***childcareSG_ppp.km*** object is in kilometer, hence the 600m is 0.6km.
 
 ```{r}
+par(bg = '#E4D5C9')
+
 kde_childcareSG_600 <- density(childcareSG_ppp.km, sigma=0.6, edge=TRUE, kernel="gaussian")
 plot(kde_childcareSG_600)
 ```
@@ -615,6 +643,8 @@ Fixed bandwidth method is very sensitive to highly skew distribution of spatial 
 In this section, we will learn how to derive adaptive kernel density estimation by using [`density.adaptive()`](https://rdrr.io/cran/spatstat/man/adaptive.density.html) of **spatstat**.
 
 ```{r}
+par(bg = '#E4D5C9')
+
 kde_childcareSG_adaptive <- adaptive.density(childcareSG_ppp.km, method="kernel")
 plot(kde_childcareSG_adaptive)
 ```
@@ -622,6 +652,8 @@ plot(kde_childcareSG_adaptive)
 We can compare the fixed and adaptive kernel density estimation outputs by using:
 
 ```{r}
+par(bg = '#E4D5C9')
+
 par(mfrow=c(1,2))
 
 plot(kde_childcareSG.bw, main = "Fixed bandwidth")
@@ -633,6 +665,8 @@ plot(kde_childcareSG_adaptive, main = "Adaptive bandwidth")
 The result is the same, we just convert it so that it is suitable for mapping purposes:
 
 ```{r}
+par(bg = '#E4D5C9')
+
 gridded_kde_childcareSG_bw <- as.SpatialGridDataFrame.im(kde_childcareSG.bw)
 spplot(gridded_kde_childcareSG_bw)
 ```
@@ -696,6 +730,8 @@ jw = mpsz[mpsz@data$PLN_AREA_N == "JURONG WEST",]
 Plotting target planning areas:
 
 ```{r}
+par(bg = '#E4D5C9')
+
 par(mfrow=c(2,2))
 plot(pg, main = "Ponggol")
 plot(tm, main = "Tampines")
@@ -737,6 +773,8 @@ childcare_jw_ppp.km = rescale(childcare_jw_ppp, 1000, "km")
 To plot these four study areas and the locations of the childcare centres.
 
 ```{r}
+par(bg = '#E4D5C9')
+
 par(mfrow=c(2,2))
 plot(childcare_pg_ppp.km, main="Punggol")
 plot(childcare_tm_ppp.km, main="Tampines")
@@ -749,6 +787,8 @@ plot(childcare_jw_ppp.km, main="Jurong West")
 To compute the KDE of these four planning area. bw.diggle method is used to derive the bandwidth of each
 
 ```{r}
+par(bg = '#E4D5C9')
+
 par(mfrow=c(2,2))
 plot(density(childcare_pg_ppp.km, 
              sigma=bw.diggle, 
@@ -777,6 +817,8 @@ plot(density(childcare_jw_ppp.km,
 For comparison purposes, we will use 250m as the bandwidth.
 
 ```{r}
+par(bg = '#E4D5C9')
+
 par(mfrow=c(2,2))
 plot(density(childcare_ck_ppp.km, 
              sigma=0.25, 
@@ -866,4 +908,4 @@ As P is \< 0.05, we reject the null hypothesis that the childcare services are r
 
 # 9 Reference
 
-Kam, T. S.1st Order Spatial Point Patterns Analysis Methods. *R for Geospatial Data Science and Analytics*. <https://r4gdsa.netlify.app/chap04.html>
+Kam, T. S. 1st Order Spatial Point Patterns Analysis Methods. *R for Geospatial Data Science and Analytics*. <https://r4gdsa.netlify.app/chap04.html>
